# dev-task

./: README.md  components.json  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  handler.rs  lifecycle.rs  main.rs
src-tauri/src/config/: file_handler.rs  mod.rs
src-tauri/src/handler/: base_file.rs  folder.rs  mod.rs  note.rs
src-tauri/src/model/: mod.rs
src/components/: breadcrumbs.tsx  new-folder-dialog.tsx  preview-button.tsx  stack.tsx
src/components/hook-form/: index.tsx  rhf-input.tsx
src/components/ui/: accordion.tsx  menubar.tsx
src/contants/: constants.ts  events.ts  index.ts
src/dashboard/: dashboard.tsx
src/dashboard/menu/: index.tsx  menu-mode-toggle.tsx  windows-controls.tsx
src/dashboard/sidebar.tsx/: folders.tsx  index.tsx
src/hooks/: debounce.tsx
src/lib/: debounce.ts  utils.ts
src/screens/folders/: index.tsx
src/screens/notes/: note-screen.tsx
src/store/: events.ts  folder.ts
src/styles/: globals.css
src/types/: Folder.ts  GlobalAppStore.ts  Note.ts
