[package]
name = "dev-task"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-maximize", "window-minimize", "window-unmaximize", "window-start-dragging", "window-set-always-on-top", "window-unminimize", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

surrealdb = { version = "1.1.1", features = ["kv-mem"] }

ts-rs = { version = "7.1.0" }

[dev-dependencies]
anyhow = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
